force-app/package-pipeline-viewer/objects/UPM_UnlockedPackage__c/UPM_UnlockedPackage__c.object-meta.xml
<CustomObject>
    <description>Represents an Unlocked Package that should be represented in the pipeline overview</description>
    <label>Unlocked Package</label>
    <nameField>
        <label>Unlocked Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unlocked Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>