force-app/package-pipeline-viewer/objects/UPM_UnlockedPackage__c/fields/ColorCode__c.field-meta.xml
<CustomField>
    <fullName>ColorCode__c</fullName>
    <description>Color code to set as the background color for tiles representing the package in the Development Pipeline tab. Use a 6-character HTML Hex Color Code, e.g &quot;FF0000&quot;</description>
    <inlineHelpText>Color code to set as the background color for tiles representing the package in the Development Pipeline tab. Use a 6-character HTML Hex Color Code, e.g &quot;FF0000&quot;</inlineHelpText>
    <label>Color Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>