force-app/package-pipeline-viewer/objects/UPM_UnlockedPackage__c/fields/LatestReleasedVersion__c.field-meta.xml
<CustomField>
    <fullName>LatestReleasedVersion__c</fullName>
    <description>The latest package version (highest version number) that has been promoted to released</description>
    <inlineHelpText>The latest package version (highest version number) that has been promoted to released</inlineHelpText>
    <label>Latest Released Version</label>
    <length>18</length>
    <type>Text</type>
</CustomField>