force-app/package-pipeline-viewer/objects/UPM_UnlockedPackage__c/fields/LatestVersion__c.field-meta.xml
<CustomField>
    <fullName>LatestVersion__c</fullName>
    <description>The latest version (highest version number) found for the package</description>
    <inlineHelpText>The latest version (highest version number) found for the package</inlineHelpText>
    <label>Latest Version</label>
    <length>15</length>
    <type>Text</type>
</CustomField>